chore(config): update cargo.toml for publishing watchr to crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "watchr"
 version = "0.1.0"
+description = "A simple file watcher that watches a list of paths and calls a callback when any of them change"
+license = "MIT"
+repository = "https://github.com/webdevcaptain/watchr"
 edition = "2021"
 
 [dependencies]
