fix: update package name across the crates and docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "watchr-filesystem"
+name = "watchr_filesystem"
 version = "0.1.0"
 description = "A simple file watcher that watches a list of paths and calls a callback when any of them change"
 license = "MIT"
